players name added

--- a/sports.html
+++ b/sports.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>List of my favourite sports</h1>
-    <h2>1. Cricket</h2>
-    <h2>2. Volleyball</h2>
-    <h2>3. Kabbadi</h2>
-    <h2>4. Kho Kho</h2>
-    <h2>5. Badminton</h2>
+    <h2>1. Cricket  (players name - Dhoni, virat)</h2>
+    <h2>2. Volleyball (players name - Bruno, Ajithlal)</h2>
+    <h2>3. Kabbadi (players name - Pradeep, Navin)</h2>
+    <h2>4. Kho Kho (players name - Hitesh, Ravi)</h2>
+    <h2>5. Badminton (players name - Pv Sindhu, Saina)</h2>
     
 </body>
 </html>
